# WhisperDemo-Pi

./: .gitignore  CMakeLists.txt  README.md
conf/: macos.conf  raspberry.conf  wdemo.conf  wdemo.sh  wmdemo.conf
raspi/: raspivid.sh
src/: CMakeLists.txt  agent.cpp  agent.h  cfg.cpp  cfg.h  cmd.cpp  cmd.h  friend.h  gadget.cpp  gadget.h  input.cpp  input.h  lock.cpp  lock.h  main.cpp  mp4.cpp  mp4.h  rtp.cpp  rtp.h  rwlock.cpp  rwlock.h  session.cpp  session.h  user.h  vlog.cpp  vlog.h
src/json/json/: json.h
src/raspi/: CMakeLists.txt  camera.c  matrix.c
xcode/twinning/twinning.xcodeproj/: project.pbxproj
xcode/twinning/twinning.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/wmdemo/wmdemo.xcodeproj/: project.pbxproj
xcode/wmdemo/wmdemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/wmdemo/wmdemo.xcodeproj/project.xcworkspace/xcuserdata/stiartsly.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/wmdemo/wmdemo.xcodeproj/xcuserdata/stiartsly.xcuserdatad/xcschemes/: wmdemo.xcscheme  xcschememanagement.plist
